--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ svg {
       -ms-flex-pack: center;
           justify-content: center;
   position: relative;
-  z-index: 1000;
+  z-index: 10;
 }
 
 .word__letter {
@@ -176,15 +176,17 @@ svg {
   font-size: 18px;
 }
 
-.alert {
-  width: 100%;
-  height: 100%;
+#alert {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -194,10 +196,32 @@ svg {
   padding: 15px;
   text-align: center;
   position: absolute;
+  z-index: 1000;
   top: 0;
+  right: 0;
+  bottom: 0;
   left: 0;
   opacity: 0;
   visibility: hidden;
+}
+
+#alert.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+#alert h2 {
+  font-size: 26px;
+}
+
+#alert button {
+  font-size: 22px;
+  border: 2px solid #000;
+  border-radius: 100px;
+  padding: 7px 30px;
+  background: #fff;
+  -webkit-box-shadow: 0px 4px 7px -5px #000;
+          box-shadow: 0px 4px 7px -5px #000;
 }
 
 @media screen and (max-width: 1400px) {
