--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,9 @@ main {
       -ms-flex-align: center;
           align-items: center;
   overflow-x: hidden;
-  overflow-y: hidden;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
   font-family: "Montserrat", sans-serif;
 }
 
@@ -27,6 +29,7 @@ main {
   padding: 10px;
   margin: 0 auto;
   position: relative;
+  overflow: hidden;
 }
 
 .title {
@@ -122,8 +125,8 @@ svg {
   right: -10px;
   bottom: -40%;
   left: -10px;
-  -webkit-box-shadow: 0px 0px 20px 20px #ffffff;
-          box-shadow: 0px 0px 20px 20px #ffffff;
+  -webkit-box-shadow: 0px 0px 20px 20px #fff;
+          box-shadow: 0px 0px 20px 20px #fff;
 }
 
 .score-wrapper {
@@ -219,9 +222,10 @@ svg {
   border: 2px solid #000;
   border-radius: 100px;
   padding: 7px 30px;
-  background: #fff;
+  background-color: #fff;
   -webkit-box-shadow: 0px 4px 7px -5px #000;
           box-shadow: 0px 4px 7px -5px #000;
+  color: #000;
 }
 
 @media screen and (max-width: 1400px) {
@@ -243,15 +247,15 @@ svg {
   .container {
     max-width: 720px;
   }
-  #axe {
-    width: 350px;
-    right: -15px;
-  }
   .word__letter {
     font-size: 42px;
   }
   .word__letter::after {
     height: 2px;
+  }
+  #axe {
+    width: 350px;
+    right: -15px;
   }
 }
 
@@ -285,12 +289,6 @@ svg {
   .container {
     max-width: none;
   }
-  .word-wrapper {
-    margin: 50px 0;
-  }
-  .word__letter {
-    font-size: 30px;
-  }
   .content {
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
@@ -299,6 +297,12 @@ svg {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+  .word-wrapper {
+    margin: 50px 0;
+  }
+  .word__letter {
+    font-size: 30px;
   }
   #axe {
     width: 80%;
