--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,6 @@
+$color_black: #000;
+$color_white: #fff;
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -10,7 +13,7 @@ main {
   justify-content: center;
   align-items: center;
   overflow-x: hidden;
-  overflow-y: hidden;
+  appearance: none;
   font-family: "Montserrat", sans-serif;
 }
 
@@ -20,6 +23,7 @@ main {
   padding: 10px;
   margin: 0 auto;
   position: relative;
+  overflow: hidden;
 }
 
 .title {
@@ -44,7 +48,7 @@ main {
 svg {
   width: 400px;
   height: 400px;
-  stroke: #000;
+  stroke: $color_black;
   stroke-width: 4px;
   stroke-linecap: round;
 }
@@ -86,20 +90,20 @@ svg {
       position: absolute;
       bottom: 5px;
       left: 5%;
-      background-color: #000;
+      background-color: $color_black;
     }
   }
 
   &::before {
     content: "";
     position: absolute;
-    background-color: #fff;
+    background-color: $color_white;
     border-radius: 15px;
     top: -10px;
     right: -10px;
     bottom: -40%;
     left: -10px;
-    box-shadow: 0px 0px 20px 20px #ffffff;
+    box-shadow: 0px 0px 20px 20px $color_white;
   }
 }
 .score-wrapper {
@@ -126,7 +130,7 @@ svg {
     left: 5%;
     width: 90%;
 
-    color: #fff;
+    color: $color_white;
     font-size: 18px;
     line-height: 1.25;
     text-align: center;
@@ -152,8 +156,8 @@ svg {
   justify-content: space-evenly;
   align-items: center;
 
-  background-color: #fff;
-  color: #000;
+  background-color: $color_white;
+  color: $color_black;
   font-size: 22px;
   padding: 15px;
   text-align: center;
@@ -178,11 +182,12 @@ svg {
 
   button {
     font-size: 22px;
-    border: 2px solid #000;
+    border: 2px solid $color_black;
     border-radius: 100px;
     padding: 7px 30px;
-    background: #fff;
+    background-color: $color_white;
     box-shadow: 0px 4px 7px -5px #000;
+    color: $color_black;
   }
 }
 
@@ -204,16 +209,16 @@ svg {
     max-width: 720px;
   }
 
-  #axe {
-    width: 350px;
-    right: -15px;
-  }
-
   .word__letter {
     font-size: 42px;
     &::after {
       height: 2px;
     }
+  }
+
+  #axe {
+    width: 350px;
+    right: -15px;
   }
 }
 @media screen and (max-width: 768px) {
@@ -247,15 +252,16 @@ svg {
     max-width: none;
   }
 
+  .content {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+
   .word-wrapper {
     margin: 50px 0;
   }
   .word__letter {
     font-size: 30px;
-  }
-  .content {
-    flex-direction: column-reverse;
-    align-items: center;
   }
 
   #axe {
